Fixed legacy image size bug

--- a/_posts/13F/2013-10-18-weekly-ctf-2013-write-up-911-918.md
+++ b/_posts/13F/2013-10-18-weekly-ctf-2013-write-up-911-918.md
@@ -14,25 +14,25 @@ Since this is an encryption problem and we are given a [Ciphertext](http://en.wi
 
 Opening decrypt\_this.txt in CrypTool, we get:
 
-[<img src="{{ site.baseurl }}/assets/cryptool_decrypt_this.png" alt="cryptool_decrypt_this" class="aligncenter size-full wp-image-445" width="1394" height="866" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/cryptool_decrypt_this.png)
+[<img src="{{ site.baseurl }}/assets/cryptool_decrypt_this.png" alt="cryptool_decrypt_this" class="aligncenter size-full wp-image-445"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/cryptool_decrypt_this.png)
 
 The end of decrypt\_this.txt has ‘==’, so we can assume this is base64 encoded (base64 uses ‘=’ as padding on the end, if the plaintext isn’t long enough). We can base64 decode in CrypTool (in the CrypTool toolbar: Indiv. Procedures -&gt; Tools -&gt; Codes -&gt; Base64 Encode/Decode -&gt; Base 64 Decode), which will give you: ([base64-decrypt\_this.txt](https://csg.utdallas.edu/wp-content/uploads/2013/10/Cry-Base64-decrypt_this.txt))
 
-[<img src="{{ site.baseurl }}/assets/base64_decode_output.png" alt="base64_decode_output" class="aligncenter size-full wp-image-446" width="1394" height="866" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/base64_decode_output.png)
+[<img src="{{ site.baseurl }}/assets/base64_decode_output.png" alt="base64_decode_output" class="aligncenter size-full wp-image-446"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/base64_decode_output.png)
 
 Because all of the output is out of the typical ASCII range (nonstandard characters), we XOR (http://en.wikipedia.org/wiki/Exclusive\_or) with 0xFF to invert all the values. (XOR is highly used in cryptography and we additionally received a hint, “*inverting it should do the trick*”; in the CrypTool toolbar: Analysis -&gt; Symmetric Encryption (classic) -&gt;Ciphertext-Only -&gt; XOR / Vernam). We get: ([xor-decrypt\_this.txt](https://csg.utdallas.edu/wp-content/uploads/2013/10/Cry-xor-decrypt_this.txt))
 
-[<img src="{{ site.baseurl }}/assets/xor_decrypt_this.png" alt="xor_decrypt_this" class="aligncenter size-full wp-image-447" width="1394" height="866" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/xor_decrypt_this.png)
+[<img src="{{ site.baseurl }}/assets/xor_decrypt_this.png" alt="xor_decrypt_this" class="aligncenter size-full wp-image-447"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/xor_decrypt_this.png)
 
 Since all most of the text is printable, were getting closer, but something is still wrong. We assume the plaintext is English and readable, we use byte addition with 0x20 (ASCII value for space character in hex, assuming that the space character is the most common). We get: ([byte-addition\_decrypt\_this.txt](https://csg.utdallas.edu/wp-content/uploads/2013/10/Cry-byte-addition_decrypt_this.txt))
 
-[<img src="{{ site.baseurl }}/assets/byte_addition_decrypt_this.png" alt="byte_addition_decrypt_this" class="aligncenter size-full wp-image-448" width="1407" height="866" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/byte_addition_decrypt_this.png)
+[<img src="{{ site.baseurl }}/assets/byte_addition_decrypt_this.png" alt="byte_addition_decrypt_this" class="aligncenter size-full wp-image-448"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/byte_addition_decrypt_this.png)
 
 Since we have clear text output, skipping to the bottom, we see: “*Oh yeah, you probably wanted a key here. The key is the title (all caps) followed by the author's last name (e.g. "THE TITLE AUTHOR")*”
 
 If you search Google for the first line of the text: “*I am Basil Elton, keeper of the North Point light that my father and grandfather kept before me.*”
 
-[<img src="{{ site.baseurl }}/assets/google_the_white_ship.png" alt="google_the_white_ship" class="aligncenter size-full wp-image-449" width="1360" height="768" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/google_the_white_ship.png)
+[<img src="{{ site.baseurl }}/assets/google_the_white_ship.png" alt="google_the_white_ship" class="aligncenter size-full wp-image-449"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/google_the_white_ship.png)
 
 We see it is called The White Ship, by H.P Lovecraft. Following the prescribed method for entering the key, we get the flag:
 
