--- a/_posts/13F/2013-10-11-weekly-ctf-2013-write-up-94-911.md
+++ b/_posts/13F/2013-10-11-weekly-ctf-2013-write-up-94-911.md
@@ -9,20 +9,20 @@ This is a write-up for the CSG CTF problem on: 9/4 - 9/11 - 10 points.
 For starters, our hint is: A mysterious logo appears. <https://csg.utdallas.edu/static/csg_logo7.png>
 
 Visiting the page:
-[<img src="{{ site.baseurl }}/assets/csg_logo7.png" alt="csg_logo7.png" class="aligncenter size-full wp-image-428" width="950" height="180" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/csg_logo7.png)
+[<img src="{{ site.baseurl }}/assets/csg_logo7.png" alt="csg_logo7.png" class="aligncenter size-full wp-image-428"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/csg_logo7.png)
 
 Since I have an image and the problem is only worth 10 points, I’m not expecting anything crazy, so I’ll run it through strings first. If you strings the file ([Wikipedia, Strings (Unix cmd)](http://en.wikipedia.org/wiki/Strings_(Unix) "Wikipedia, Strings (Unix cmd)")), you see:
-[<img src="{{ site.baseurl }}/assets/Screen-Shot-2013-10-11-at-2.24.48-AM.png" alt="Strings output, csg_logo7.png" class="aligncenter size-full wp-image-429" width="1351" height="886" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/Screen-Shot-2013-10-11-at-2.24.48-AM.png)
+[<img src="{{ site.baseurl }}/assets/Screen-Shot-2013-10-11-at-2.24.48-AM.png" alt="Strings output, csg_logo7.png" class="aligncenter size-full wp-image-429"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/Screen-Shot-2013-10-11-at-2.24.48-AM.png)
 
 This isn’t much data, but it does have some Adobe ‘filler’, meaning this image was made or edited in an Adobe program (xmp:CreatorTool="Adobe Photoshop CS5 Windows" - to be exact). To be safe and not waste time, I ran it through an online ELA tool ([Wikipedia, Error analysis](http://en.wikipedia.org/wiki/Error_analysis "Wikipedia, Error analysis")), [Online ELA Tool](http://29a.ch/sandbox/2012/imageerrorlevelanalysis/ "Online ELA Tool").
 
 After playing with the “Error Scale” slider we get an artifact in the logo:
-[<img src="{{ site.baseurl }}/assets/Screen-Shot-2013-10-11-at-2.34.39-AM.png" alt="Online ELA, csg_logo7.png" class="aligncenter size-full wp-image-430" width="1356" height="892" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/Screen-Shot-2013-10-11-at-2.34.39-AM.png)
+[<img src="{{ site.baseurl }}/assets/Screen-Shot-2013-10-11-at-2.34.39-AM.png" alt="Online ELA, csg_logo7.png" class="aligncenter size-full wp-image-430"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/Screen-Shot-2013-10-11-at-2.34.39-AM.png)
 
 You get the flag, key{YOU\_FOUND\_ME!}
 
 Since the key was added by changing the Gamma values, this solution was also available by using a paint bucket tool on it, such as Microsoft Paint or Gimp:
-[<img src="{{ site.baseurl }}/assets/paint_sol.png" alt="paint_sol.png" class="aligncenter size-full wp-image-431" width="1103" height="732" />](https://csg.utdallas.edu/wp-content/uploads/2013/10/paint_sol.png)
+[<img src="{{ site.baseurl }}/assets/paint_sol.png" alt="paint_sol.png" class="aligncenter size-full wp-image-431"   />](https://csg.utdallas.edu/wp-content/uploads/2013/10/paint_sol.png)
 
 /endwriteup
 -Zack
