--- a/_posts/17S/2017-04-21-plaid-ctf.md
+++ b/_posts/17S/2017-04-21-plaid-ctf.md
@@ -4,6 +4,8 @@ title: "Plaid CTF"
 date: 2017-04-21 07:00:00.000000000 -05:00
 ---
 
+UPDATE: PlaidCTF is officially over. CSG ended up at 129th place out of 555. Write ups can be found at <https://ctftime.org/event/439/tasks/>.
+
 CSG is competing in Plaid CTF Friday, April 21 to Sunday, April 23. To work remotely, email <utdcsg@gmail.com> from your UT Dallas email account for the password, and join us in IRC in #utdcsg on OFTC. The lab (ECSS 4.619) will be open from 13:00 to 16:00 on Saturday, April 22nd to work on the competition.
 
 We plan to compile write ups for the problems members solve, so we would greatly appreciate it if you would write down the steps you took to solve a problem. These write ups can be emailed to <utdcsg@gmail>.
