--- a/_posts/17F/2017-11-15-ctf.md
+++ b/_posts/17F/2017-11-15-ctf.md
@@ -5,3 +5,7 @@ date: 2017-11-13 07:00:00.000000000 -05:00
 ---
 
 Join CSG, November 15st Wednesday at 7:00 PM in JO 3.516, as we walk through the infrastructure needed to run a CTF, building CTF challenges, and applying modern DevOps practices to CTF deployment.
+
+Slides: <https://csg.utdallas.edu/assets/slides/ctf_infrastructure.pdf>
+
+Gitlab: <https://gitlab.com/container-the-flag/examplebinary>
